Z-Index Bug des 'Lösen'-Buttons behoben.

--- a/less/quiz.less
+++ b/less/quiz.less
@@ -618,6 +618,7 @@
         &.quiz-solve, &.quiz-next {
             font-weight: bold;
             text-transform: uppercase;
+            z-index: 200;
             .transition();
             
             // Icon & Versteckt
